[package]
name = "sledgehammer_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sledgehammer = { path = "d:/users/desktop/github/fast_dom" }
# sledgehammer = { git = "https://github.com/demonthos/sledgehammer" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'Node',
  'Window',
  'console',
  'Performance',
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3